--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ limitations under the License.
             <canvas class="data-thumbnail" data-regDataset="reg-gauss"></canvas>
           </div>
         </div>
+        <button>Allo</button>
       </div>
       <div>
         <div class="ui-percTrainData">
