--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@ limitations under the License.
             <canvas class="data-thumbnail" data-regDataset="reg-gauss"></canvas>
           </div>
         </div>
-        <button class="">Allo</button>
+        <input id='fileid' type='file' hidden/>
+        <input type="submit" class="basic-button" id="add-data-button" title="Add Dataset" value="add dataset" />
       </div>
       <div>
         <div class="ui-percTrainData">
