--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ limitations under the License.
           </div>
         </div>
         <input id='fileid' type='file' hidden/>
-        <input type="submit" class="basic-button" id="add-data-button" title="Importer un dataset" value="Importer un dataset" />
+        <input type="submit" class="basic-button" id="add-data-button" title="Importer un dataset" value="Importer dataset" />
       </div>
       <div>
         <div class="ui-percTrainData">
