Avancement sur ajout de datasets à partir de fichiers textes ou csv

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ limitations under the License.
       </h4>
       <div class="ui-dataset">
         <p>Quel dataset voulez-vous utiliser</p>
-        <div class="dataset-list">
+        <div id="datasetlist" class="dataset-list">
           <div class="dataset" title="Circle">
             <canvas class="data-thumbnail" data-dataset="circle"></canvas>
           </div>
